# DLearningClient

./: Cargo.toml  README.md
src/: main.rs
src/assets/: .env  all_policy.json  role_policy.json  standard.ssml  trust_policy.json  wildcard_managed_policy.txt
