[package]
name = "DLearningClient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = {version = "0.6.2"}
colored = "2.0.4"
aws_apis = {git = "https://github.com/Sanjuvi/aws_apis.git"}
tokio = {version ="1.32.0",features = ["macros","rt-multi-thread"]}
dotenv ="0.15.0"
image ="0.24.7"
imageproc ="0.23.0"
rusttype ="0.9.3"
serde_json = "1.0"
regex ="1.9.5"
reqwest = "0.11.20"
image_compressor = "1.3.0"
#openssl = { version = "*", features = ["vendored"] }